--- a/landing-page.html
+++ b/landing-page.html
@@ -496,7 +496,7 @@
                 payButton.disabled = true;
                 payButton.textContent = 'Memproses...';
                 try {
-                    const response = await fetch('https://panti-backend-api.onrender.com', {
+                    const response = await fetch('https://panti-backend-api.onrender.com/create-invoice', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify({ 
@@ -527,3 +527,4 @@
 </body>
 
 </html>
+
