--- a/terima-kasih.html
+++ b/terima-kasih.html
@@ -51,7 +51,7 @@
 
             try {
                 // Halaman ini sekarang hanya mengambil data, tidak lagi menulis ke database
-                const response = await fetch(`http://localhost:3000/get-invoice?id=${externalId}`);
+                const response = await fetch(`https://panti-backend-api.onrender.com/get-invoice?id=${externalId}`);
                 if (!response.ok) throw new Error('Gagal mengambil detail dari server.');
 
                 const invoice = await response.json();
